Webpack config separated

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
       <router-view></router-view>
     </div>
   </body>
+  <script src="./dist/js/bundled.js.map"></script>
   <script src="./dist/js/bundled.js"></script>
+  <!--To production TODO-->
+  <!--<script src="./dist/js/bundled.min.js"></script>-->
 </html>
