--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#17a2b8">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#17a2b8">
+    <meta name="msapplication-navbutton-color" content="#17a2b8">
+    <link rel="icon" href="https://lh3.googleusercontent.com/VC1CFpy6PDrPYeRfSK5zuyeS2EpDMqPI_4WjnmizVAbWqEoJbetD4vIXt3l99-tx6w=w300" type="png" />
     <title>Games list</title>
   </head>
   <body>
