Added server to render the html

--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
   <script src="./dist/js/bundled.js.map"></script>
   <script src="./dist/js/bundled.js"></script>
   <!--To production TODO-->
-  <!--<script src="./dist/js/bundled.min.js"></script>-->
+  <script src="./dist/js/bundled.min.js"></script>
 </html>
